kubernetes-config/adminservice_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin-deployment
  namespace: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: admin
  template:
    metadata:
      labels:
        app: admin
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: admin
          image: ghcr.io/balazsvokheloxd/shippingmanager-adminservice:latest
          ports:
            - containerPort: 5000
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app
                      operator: In
                      values:
                        - admin
                topologyKey: "kubernetes.io/hostname"
---
apiVersion: v1
kind: Service
metadata:
  name: admin-service
  namespace: backend
spec:
  selector:
    app: admin
  ports:
    - port: 80
      targetPort: 5000
  type: ClusterIP
