kubernetes-config/consumerservice_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: consumer-deployment
  namespace: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: consumer-worker
  template:
    metadata:
      labels:
        app: consumer-worker
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: consumer-worker
          image: ghcr.io/balazsvokheloxd/shippingmanager-consumerservice:latest
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app
                      operator: In
                      values:
                        - consumer-worker
                topologyKey: "kubernetes.io/hostname"
---
apiVersion: v1
kind: Service
metadata:
  name: consumer-worker
  namespace: backend
spec:
  selector:
    app: consumer-worker
  ports:
    - port: 8080
      targetPort: 8080
  type: ClusterIP
