kubernetes-config/reservationservice_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reservation-deployment
  namespace: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: reservation
  template:
    metadata:
      labels:
        app: reservation
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: user
          image: ghcr.io/balazsvokheloxd/shippingmanager-reservationservice:latest
          ports:
            - containerPort: 5000
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app
                      operator: In
                      values:
                        - reservation
                topologyKey: "kubernetes.io/hostname"
---
apiVersion: v1
kind: Service
metadata:
  name: reservation-service
  namespace: backend
spec:
  selector:
    app: reservation
  ports:
    - port: 80
      targetPort: 5000
  type: ClusterIP
